testsuite/escript/func/func011-default-parameter-bare-function-call.src
use math;

// "Only simple operands..."

function foo(x := ConstPi())
    print(x);
endfunction

foo();
